Fix invisible selected option on dark theme

--- a/styles/main.less
+++ b/styles/main.less
@@ -353,6 +353,11 @@ h1,h2,h3,h4,h5,h6 {
     color: #fde2a9;
 }
 
+#main.dark-interior select {
+    background: #fff;
+    color: #27384a;
+}
+
 /* Break at the Foundation small boundry */
 @media screen and (max-width: 39.9375em) {
   @import 'sqs-grid-breaker';
